use autoboxing or valueOf where possible